--- a/board-game-qa.ipynb
+++ b/board-game-qa.ipynb
@@ -5,8 +5,8 @@
    "id": "a1fdefcf-62a6-42ea-a9f8-92856afe46e3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-06T14:03:25.892809Z",
-     "start_time": "2025-02-06T14:03:23.082584Z"
+     "end_time": "2025-02-26T12:45:01.748636Z",
+     "start_time": "2025-02-26T12:44:59.714577Z"
     }
    },
    "source": [
@@ -32,20 +32,20 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 1
+   "execution_count": 4
   },
   {
    "cell_type": "code",
    "id": "1b87cf4c-8d81-4a45-99dd-32eab6d4bfd1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-06T14:03:25.898239Z",
-     "start_time": "2025-02-06T14:03:25.893867Z"
+     "end_time": "2025-02-26T12:45:01.755349Z",
+     "start_time": "2025-02-26T12:45:01.749745Z"
     }
    },
    "source": [
@@ -88,15 +88,15 @@
     "        return dspy.Prediction(answer=final_research.summary, research=research_context)"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 5
   },
   {
    "cell_type": "code",
    "id": "69833045-86a6-4693-8782-1c384c12c01d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-06T14:03:25.901921Z",
-     "start_time": "2025-02-06T14:03:25.899410Z"
+     "end_time": "2025-02-26T12:45:01.757442Z",
+     "start_time": "2025-02-26T12:45:01.755952Z"
     }
    },
    "source": [
@@ -104,15 +104,15 @@
     "dspy.configure(lm=lm)"
    ],
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 6
   },
   {
    "cell_type": "code",
    "id": "8ea9f265-140d-4c78-9122-f69f87b69fcf",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-06T14:04:44.772542Z",
-     "start_time": "2025-02-06T14:03:25.902902Z"
+     "end_time": "2025-02-26T12:45:01.773865Z",
+     "start_time": "2025-02-26T12:45:01.758411Z"
     }
    },
    "source": [
@@ -135,15 +135,15 @@
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 7
   },
   {
    "cell_type": "code",
    "id": "d660c7e6f2aa4b5b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-06T14:04:44.777951Z",
-     "start_time": "2025-02-06T14:04:44.773695Z"
+     "end_time": "2025-02-26T12:45:01.775944Z",
+     "start_time": "2025-02-26T12:45:01.774377Z"
     }
    },
    "source": "print(f\"Answer: {recommendation.answer}\")",
@@ -156,13 +156,13 @@
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-06T14:04:44.781798Z",
-     "start_time": "2025-02-06T14:04:44.779221Z"
+     "end_time": "2025-02-26T12:45:01.777897Z",
+     "start_time": "2025-02-26T12:45:01.776379Z"
     }
    },
    "cell_type": "code",
@@ -198,15 +198,15 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 9
   },
   {
    "cell_type": "code",
    "id": "1019f06a-2ada-4059-a1f4-dd1776a7913b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-06T14:04:44.785087Z",
-     "start_time": "2025-02-06T14:04:44.782534Z"
+     "end_time": "2025-02-26T12:45:01.780246Z",
+     "start_time": "2025-02-26T12:45:01.778498Z"
     }
    },
    "source": [
@@ -221,7 +221,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001B[34m[2025-02-06T15:03:31.653663]\u001B[0m\n",
+      "\u001B[34m[2025-02-26T13:45:01.764965]\u001B[0m\n",
       "\n",
       "\u001B[31mSystem message:\u001B[0m\n",
       "\n",
@@ -279,7 +279,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001B[34m[2025-02-06T15:03:38.220684]\u001B[0m\n",
+      "\u001B[34m[2025-02-26T13:45:01.766150]\u001B[0m\n",
       "\n",
       "\u001B[31mSystem message:\u001B[0m\n",
       "\n",
@@ -336,7 +336,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001B[34m[2025-02-06T15:03:49.080455]\u001B[0m\n",
+      "\u001B[34m[2025-02-26T13:45:01.767289]\u001B[0m\n",
       "\n",
       "\u001B[31mSystem message:\u001B[0m\n",
       "\n",
@@ -393,7 +393,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001B[34m[2025-02-06T15:03:59.844480]\u001B[0m\n",
+      "\u001B[34m[2025-02-26T13:45:01.768053]\u001B[0m\n",
       "\n",
       "\u001B[31mSystem message:\u001B[0m\n",
       "\n",
@@ -450,7 +450,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001B[34m[2025-02-06T15:04:08.323147]\u001B[0m\n",
+      "\u001B[34m[2025-02-26T13:45:01.768883]\u001B[0m\n",
       "\n",
       "\u001B[31mSystem message:\u001B[0m\n",
       "\n",
@@ -507,7 +507,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001B[34m[2025-02-06T15:04:17.712375]\u001B[0m\n",
+      "\u001B[34m[2025-02-26T13:45:01.769728]\u001B[0m\n",
       "\n",
       "\u001B[31mSystem message:\u001B[0m\n",
       "\n",
@@ -564,7 +564,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001B[34m[2025-02-06T15:04:26.776635]\u001B[0m\n",
+      "\u001B[34m[2025-02-26T13:45:01.770629]\u001B[0m\n",
       "\n",
       "\u001B[31mSystem message:\u001B[0m\n",
       "\n",
@@ -621,7 +621,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001B[34m[2025-02-06T15:04:34.338689]\u001B[0m\n",
+      "\u001B[34m[2025-02-26T13:45:01.771438]\u001B[0m\n",
       "\n",
       "\u001B[31mSystem message:\u001B[0m\n",
       "\n",
@@ -678,7 +678,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001B[34m[2025-02-06T15:04:44.770817]\u001B[0m\n",
+      "\u001B[34m[2025-02-26T13:45:01.772851]\u001B[0m\n",
       "\n",
       "\u001B[31mSystem message:\u001B[0m\n",
       "\n",
@@ -738,13 +738,13 @@
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-06T14:06:20.879793Z",
-     "start_time": "2025-02-06T14:04:44.786136Z"
+     "end_time": "2025-02-26T12:45:01.792138Z",
+     "start_time": "2025-02-26T12:45:01.780674Z"
     }
    },
    "cell_type": "code",
@@ -769,13 +769,13 @@
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-06T14:06:20.886189Z",
-     "start_time": "2025-02-06T14:06:20.881281Z"
+     "end_time": "2025-02-26T12:45:01.794233Z",
+     "start_time": "2025-02-26T12:45:01.792769Z"
     }
    },
    "cell_type": "code",
@@ -790,13 +790,13 @@
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-06T14:06:20.892722Z",
-     "start_time": "2025-02-06T14:06:20.889932Z"
+     "end_time": "2025-02-26T12:45:01.797262Z",
+     "start_time": "2025-02-26T12:45:01.795803Z"
     }
    },
    "cell_type": "code",
@@ -832,7 +832,7 @@
      ]
     }
    ],
-   "execution_count": 10
+   "execution_count": 13
   },
   {
    "metadata": {},
@@ -847,8 +847,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-06T15:51:32.240571Z",
-     "start_time": "2025-02-06T15:51:32.228295Z"
+     "end_time": "2025-02-26T12:45:01.802550Z",
+     "start_time": "2025-02-26T12:45:01.797767Z"
     }
    },
    "cell_type": "code",
@@ -902,13 +902,13 @@
    ],
    "id": "a69475a32762dc5c",
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-06T15:51:34.416289Z",
-     "start_time": "2025-02-06T15:51:34.403047Z"
+     "end_time": "2025-02-26T12:45:01.814816Z",
+     "start_time": "2025-02-26T12:45:01.803136Z"
     }
    },
    "cell_type": "code",
@@ -940,13 +940,13 @@
      ]
     }
    ],
-   "execution_count": 17
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-06T15:52:08.019768Z",
-     "start_time": "2025-02-06T15:52:08.016171Z"
+     "end_time": "2025-02-26T12:45:01.817425Z",
+     "start_time": "2025-02-26T12:45:01.815416Z"
     }
    },
    "cell_type": "code",
@@ -962,18 +962,18 @@
        ")"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 18
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-06T15:52:20.457022Z",
-     "start_time": "2025-02-06T15:52:20.446609Z"
+     "end_time": "2025-02-26T12:45:01.832354Z",
+     "start_time": "2025-02-26T12:45:01.818266Z"
     }
    },
    "cell_type": "code",
@@ -1006,13 +1006,13 @@
      ]
     }
    ],
-   "execution_count": 19
+   "execution_count": 17
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-06T15:52:32.767550Z",
-     "start_time": "2025-02-06T15:52:32.764084Z"
+     "end_time": "2025-02-26T12:45:01.834935Z",
+     "start_time": "2025-02-26T12:45:01.832895Z"
     }
    },
    "cell_type": "code",
@@ -1028,20 +1028,80 @@
        ")"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 20
+   "execution_count": 18
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-26T12:45:55.496394Z",
+     "start_time": "2025-02-26T12:45:01.835488Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "c2fe11fd2048a37e"
+   "source": [
+    "adaptative_assistant = BoardGameAdaptativeAssistant()\n",
+    "result = adaptative_assistant(question=\"What's the best opening move in Catan? Explain in high detail 3 potential scenarios where it showcases the best performance.\")\n"
+   ],
+   "id": "c2fe11fd2048a37e",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Question: What's the best opening move in Catan? Explain in high detail 3 potential scenarios where it showcases the best performance. research tasks: 8\n",
+      " - Evaluating retrieval need for: What are the key resources in Catan, and how do they influence the opening move?\n",
+      "   ⏭️No retrieval needed. Skipping this subquestion.\n",
+      " - Evaluating retrieval need for: How does the initial placement of settlements affect resource acquisition and strategy?\n",
+      "   ⏭️No retrieval needed. Skipping this subquestion.\n",
+      " - Evaluating retrieval need for: What are the common strategies for the first settlement placement in Catan?\n",
+      "   ⏭️No retrieval needed. Skipping this subquestion.\n",
+      " - Evaluating retrieval need for: How does the distribution of numbers on the board impact the effectiveness of an opening move?\n",
+      "   ⏭️No retrieval needed. Skipping this subquestion.\n",
+      " - Evaluating retrieval need for: What role do ports play in determining the best opening move in Catan?\n",
+      "   ⏭️No retrieval needed. Skipping this subquestion.\n",
+      " - Evaluating retrieval need for: How can the strategies of other players influence your opening move decision?\n",
+      "   ⏭️No retrieval needed. Skipping this subquestion.\n",
+      " - Evaluating retrieval need for: What are the advantages and disadvantages of prioritizing different resources in the opening move?\n",
+      "   ✅Retrieval needed. Researching...\n",
+      " - Evaluating retrieval need for: How does the choice of initial roads affect future expansion opportunities in Catan?\n",
+      "   ⏭️No retrieval needed. Skipping this subquestion.\n"
+     ]
+    }
+   ],
+   "execution_count": 19
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-26T12:45:55.502756Z",
+     "start_time": "2025-02-26T12:45:55.498072Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from IPython.display import display, Markdown\n",
+    "\n",
+    "display(Markdown(result['answer']))"
+   ],
+   "id": "5d6c2baff4e099f4",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ],
+      "text/markdown": "The best opening move in Catan varies based on the board setup and opponents' strategies. In a scenario with limited space and high competition, prioritizing brick and wood is advantageous for rapid expansion. In contrast, focusing on wheat and ore is beneficial when high resource production is possible, allowing for quick upgrades to cities. A balanced approach, securing a mix of resources, is effective when the board is evenly distributed, providing flexibility to adapt to the game's progression. The optimal strategy involves assessing the board and opponents to determine the most advantageous resources to prioritize."
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "execution_count": 20
   }
  ],
  "metadata": {
